# tutorial-py

./: LICENSE  README.md  pyproject.toml
api_pedidos/: api.py  api_post.py  esquema.py  excecao.py  magalu_api.py
tests/: test_api.py
